2007-01-26  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11109
          REGRESSION (r15471): menus are offset on eink.com
          <rdar://problem/4824760>

        Changed offset{Left,Top} to match Firefox. If the body element is statically
        positioned, it is still returned as the offsetParent of elements whose containing
        block is the initial containing block (the root), but their offset{Left,Top} are
        relative to the root. If the body element is positioned, then offsets are relative
        to it. The body's own offset{Left,Top} are always 0. 

        Test: fast/dom/Element/offsetLeft-offsetTop-body-quirk.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::offsetLeft):
        (WebCore::RenderObject::offsetTop):

2007-01-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test and updated tests and results for
          http://bugs.webkit.org/show_bug.cgi?id=11109
          REGRESSION (r15471): menus are offset on eink.com
          <rdar://problem/4824760>

        * editing/execCommand/findString-2.html:
        * editing/pasteboard/4947130.html:
        * editing/pasteboard/drop-text-without-selection.html:
        * editing/selection/anchor-focus1-expected.txt:
        * editing/selection/click-before-and-after-table.html:
        * editing/selection/drag-select-1.html:
        * editing/selection/editable-links-expected.txt:
        * editing/selection/mixed-editability-1.html:
        * editing/selection/paragraph-granularity.html:
        * editing/selection/selection-actions.html:
        * editing/selection/word-granularity.html:
        * fast/dom/Element/offsetLeft-offsetTop-body-quirk-expected.txt: Added.
        * fast/dom/Element/offsetLeft-offsetTop-body-quirk.html: Added.
        * fast/forms/drag-into-textarea.html:
        * fast/forms/listbox-selection-2.html:
        * fast/forms/listbox-selection.html:
        * fast/table/click-near-anonymous-table-expected.txt:
        * fast/table/click-near-anonymous-table.html:


git-svn-id: svn://svn.chromium.org/blink/trunk@19149 bbb929c8-8fbe-4397-9dbb-9b2b20218538