third_party/WebKit/WebCore/rendering/RenderObject.cpp
@@ -517,6 +517,8 @@ int RenderObject::offsetLeft() const
             x += curr->xPos();
             curr = curr->parent();
         }
+        if (offsetPar->isBody() && !offsetPar->isRelPositioned() && !offsetPar->isPositioned())
+            x += offsetPar->xPos();
     }
     return x;
 }
@@ -536,6 +538,8 @@ int RenderObject::offsetTop() const
                 y += curr->yPos();
             curr = curr->parent();
         }
+        if (offsetPar->isBody() && !offsetPar->isRelPositioned() && !offsetPar->isPositioned())
+            y += offsetPar->yPos();
     }
     return y;
 }
